made changes to the quote create component

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,5 +1,5 @@
 <app-menu></app-menu>
-<div>
+<!--<div>
     <span id="pageTitle">TIDC Products/Services</span>  |
     <a routerLink="/item/create">Create New Product/Service</a> |
     <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
@@ -7,11 +7,11 @@
 <form action="#">
 
 </form>
-<!--<body>
+<body>
     <div ng-app="">
         <p>Product: <input type="checkbox" [(ngModel)]="items" type="checkbox">
     </div>
-</body>-->
+</body>
 
 <body>
     <h1>Connection</h1>
@@ -50,4 +50,4 @@
 </table>
 </main>
 </div>
-<footer></footer>
+<footer></footer>-->
