--- a/src/app/item/item-detail/item-detail.component.html
+++ b/src/app/item/item-detail/item-detail.component.html
@@ -12,31 +12,31 @@
             </tr>
             <tr>
                 <td>Sku:</td>
-                <td><input [(ngModel)]="item.sku" type="text" ></td>
+                <td><input [(ngModel)]="item.sku" type="text" readonly></td>
             </tr>
             <tr>
                 <td>Part#:</td>
-                <td><input [(ngModel)]="item.partNumber" type="text" ></td>
+                <td><input [(ngModel)]="item.partNumber" type="text" readonly ></td>
             </tr>
             <tr>
                 <td>Product:</td>
-                <td><input [(ngModel)]="item.shortDescription" type="text" ></td>
+                <td><input [(ngModel)]="item.shortDescription" type="text" readonly ></td>
             </tr>
             <tr>
                 <td>Description:</td>
-                <td><input [(ngModel)]="item.longDescription" type="text" ></td>
+                <td><input [(ngModel)]="item.longDescription" type="text" readonly ></td>
             </tr>
             <tr>
                 <td>Cost:</td>
-                <td><input [(ngModel)]="item.cost" type="number" ></td>
+                <td><input [(ngModel)]="item.cost" type="number" readonly></td>
             </tr>
             <tr>
                 <td>Sell Price:</td>
-                <td><input [(ngModel)]="item.sell" type="number" ></td>
+                <td><input [(ngModel)]="item.sell" type="number" readonly ></td>
             </tr>
             <tr>
                 <td>Unit:</td>
-                <td><input [(ngModel)]="item.unit" type="text" ></td>
+                <td><input [(ngModel)]="item.unit" type="text" readonly ></td>
             </tr>
         </tbody>
     </table>
