created dist file 8/4/2022

--- a/src/app/quote/create-quote/create-quote.component.html
+++ b/src/app/quote/create-quote/create-quote.component.html
@@ -47,6 +47,8 @@
             </form>
         </div>
 
+        <!--this is the new attempt below prior to the table that shows
+       
  
         
     <table class="table table-striped table-sm" id="headings">
@@ -71,7 +73,7 @@
     <td>{{ i.cost | currency }}</td>
     <td>{{ i.sell | currency }}</td>   
    </tr>
-</table>
+</table>-->
 
 <form>
     <label for="services">Services: &nbsp; &nbsp;</label>
