added checkox to itemlist

--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div>
     <span id="pageTitle">TIDC Pricing Categories</span>  |
-    <a routerLink="/category/create"></a> |
+    <a routerLink="/category/create"></a> 
     <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
 </div>
 <div>
