--- a/src/app/item/item-list/item-list.component.html
+++ b/src/app/item/item-list/item-list.component.html
@@ -9,7 +9,8 @@
 <table class="table table-striped table-sm">
     <thead>
         <tr>
-            <td>Id</td>
+            <td></td>
+           <!-- <td>Id</td>-->
             <td>Product</td>
             <td>SKU</td>
             <td>Part Number</td>
@@ -23,7 +24,8 @@
     </thead>
     <tbody>
         <tr *ngFor="let i of items | itemSearch:searchCriteria">
-            <td>{{ i.id }}</td>
+           <td><input type="checkbox" id ="tblSelected" method=""></td> 
+                    <!--<td>{{ i.id }}</td>-->
             <td>{{ i.category.description }}</td>
             <td>{{ i.sku }}</td>
             <td>{{ i.partNumber }}</td>
@@ -39,6 +41,8 @@
                 </span>
             </td>
         </tr>
+        <br>
+        <button class="btn btn-primary" type="submit" a routerLink="/quote/create/">Create Quote</button>
     </tbody>
 </table>
 </main>
