--- a/src/app/quote/create-quote/create-quote.component.html
+++ b/src/app/quote/create-quote/create-quote.component.html
@@ -1,4 +1,4 @@
-<app-menu></app-menu>
+<!--<app-menu></app-menu>-->
 <div class="right">
     <p>Quote <br>
         <label for="Submitted">Submitted on:&nbsp;</label>
@@ -14,14 +14,14 @@
        <div class="top">
         <form class="top">
             <label for="For">For:&nbsp;&nbsp; </label>
-            <input type="text" id="for" style="width: 1100px;">
-            <br>
+            <input type="text" id="for" style="width: 1100px;">            
         </form>
         
         <form>
             <label for="account manager">Account Manager: &nbsp;&nbsp;   </label>
             <input type="text" id="account manager" style="width: 1000px;">
         </form>
+        
         <form>
             <label for="wid">WID:&nbsp;&nbsp;</label>
             <input type="text" id="wid" style="width: 1100px;">
@@ -34,23 +34,22 @@
         </form>
        </div>
         <div>
-            <form action="#">
-               <!-- <label for="Products"> Choose Product/Services</label> -->
+          <!-- <form action="#">
+                <label for="Products"> Choose Product/Services</label>
                 <tr>
                     <td>Choose Products/Services: &nbsp;</td>
                         <td>
                             <select multiple="true" class="selectItems" [(ngModel)]="item.categoryId">
                                 <option *ngFor="let i of items" value="{{i.id}}">{{i.shortDescription}}</option>                              
-                            </select>
+                            </select>                         
                         </td>
-                </tr>    
-            </form>
+                </tr>                 
+            </form>-->
         </div>
 
-        <!--this is the new attempt below prior to the table that shows
+        <table></table>
+
        
- 
-        
     <table class="table table-striped table-sm" id="headings">
     <thead>
         <tr>
@@ -73,7 +72,7 @@
     <td>{{ i.cost | currency }}</td>
     <td>{{ i.sell | currency }}</td>   
    </tr>
-</table>-->
+</table>
 
 <form>
     <label for="services">Services: &nbsp; &nbsp;</label>
