added logo and checkboxes

--- a/src/app/category/category-detail/category-detail.component.html
+++ b/src/app/category/category-detail/category-detail.component.html
@@ -12,7 +12,7 @@
             </tr>
             <tr>
                 <td>Sku:</td>
-                <td><input [(ngModel)]="category.description" type="text" ></td>
+                <td><input [(ngModel)]="category.description" type="text" readonly ></td>
             </tr>
           
         </tbody>
