--- a/src/app/quote/create-quote/create-quote.component.css
+++ b/src/app/quote/create-quote/create-quote.component.css
@@ -4,6 +4,7 @@
 
 
 .top {
+    float:left;
     font-weight: bold;
 }
 
@@ -11,6 +12,11 @@ thead {
     color: blue;
 
 }
+.left {
+    float:left;
+    margin-left: 10px;
+}
+
 .right {
     float: right; 
     margin-right: 10px;
