--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -1,12 +1,13 @@
 <app-menu></app-menu>
 <div>
+    <br>
     <span id="pageTitle">TIDC Pricing Categories</span>  |
     <a routerLink="/category/create"></a> 
-    <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
+    <!-- <input [(ngModel)]="searchCriteria" type="text" placeholder="Search"> -->
 </div>
 <div>
 <main>
-<table class="table table-striped table-sm">
+<table class="table table-striped table-sm" class="table table-hover">
     <thead>
         <tr>
             <td>Id</td>
