--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav class="navbar expand-md py3">
     <ul>
         <li *ngFor="let m of menus">
             <a routerLink="{{m.route}}">{{ m.display }}</a>
