--- a/src/app/quote/create-quote/create-quote.component.html
+++ b/src/app/quote/create-quote/create-quote.component.html
@@ -8,7 +8,7 @@
 </div>
 <div class="left">
 <span>
-<img src='./assets/images/Connection.png' alt="logo" width="365" height="65">
+<img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65">
 </span>
 </div>
 
@@ -21,7 +21,7 @@
         </form>
         
         <form>
-            <label for="account manager">Account Manager: &nbsp;&nbsp;   </label>
+            <label for="account manager">Account Manager: &nbsp;&nbsp;</label>
             <input type="text" id="account manager" style="width: 1000px;">
         </form>
         
@@ -36,8 +36,8 @@
             <hr>
         </form>
        </div>
-        <div>
-          <!-- <form action="#">
+        <!-- <div>
+          <form action="#">
                 <label for="Products"> Choose Product/Services</label>
                 <tr>
                     <td>Choose Products/Services: &nbsp;</td>
@@ -47,10 +47,10 @@
                             </select>                         
                         </td>
                 </tr>                 
-            </form>-->
-        </div>
+            </form>
+        </div> -->
 
-        <table></table>
+        
 
        
     <table class="table table-striped table-sm" id="headings">
