--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,53 +1,17 @@
-<app-menu></app-menu>
-<!--<div>
-    <span id="pageTitle">TIDC Products/Services</span>  |
-    <a routerLink="/item/create">Create New Product/Service</a> |
-    <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
-</div>
-<form action="#">
-
-</form>
-<body>
-    <div ng-app="">
-        <p>Product: <input type="checkbox" [(ngModel)]="items" type="checkbox">
-    </div>
-</body>
-
-<body>
-    <h1>Connection</h1>
-</body>
-<div>
+<<app-menu></app-menu>
+<br>
 <main>
-<table class="table table-striped table-sm">
-    <thead>
-        <tr>
-            <td>Id</td>
-            <td>Product</td>
-            <td>SKU</td>
-            <td>Part Number</td>
-            <td>Short Description</td>
-            <td>Long Description</td>
-            <td>Cost</td>
-            <td>Sell Price</td>
-            <td>Unit</td>            
-            <td>Actions</td>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let i of items | itemSearch:searchCriteria">
-            <td>{{ i.id }}</td>
-            <td>{{ i.category.description }}</td>
-            <td>{{ i.sku }}</td>
-            <td>{{ i.partNumber }}</td>
-            <td>{{ i.shortDescription }}</td>
-            <td>{{ i.longDescription }}</td>
-            <td>{{ i.cost | currency }}</td>
-            <td>{{ i.sell | currency }}</td>
-            <td>{{ i.unit}}</td>
-         
-        </tr>
-    </tbody>
-</table>
+    <body>
+        <div id="home">
+               
+            <form>            
+                <p>
+                    <button class="btn btn-outline-secondary btn-lg shadow p-3 mb-5 rounded" a routerLink="/item/list/">Maintenance </button> &nbsp; &nbsp;     
+        
+                     <button class="btn btn-outline-secondary btn-lg shadow p-3 mb-5 rounded" a routerLink="/quote/create/">Create Quote</button>
+              </p>                 
+            </form>
+        </div> 
+    </body>
 </main>
-</div>
-<footer></footer>-->
+<footer></footer>
