--- a/src/app/item/item-list/item-list.component.html
+++ b/src/app/item/item-list/item-list.component.html
@@ -1,11 +1,12 @@
 <app-menu></app-menu>
+<br>
 <div>
     <span id="pageTitle">TIDC Products/Services</span>  |
     <a routerLink="/item/create">Create New Product/Service</a> |
     <input [(ngModel)]="searchCriteria" type="text" placeholder="Search">
 </div>
 
-<table class="table table-striped table-sm" >
+<table class="table table-striped table-sm" class="table table-hover" >
     <thead>
         <tr>
             <td></td>
@@ -23,8 +24,8 @@
     </thead>
     <tbody>
         <tr *ngFor="let i of items | itemSearch:searchCriteria">
-
-           <td><input type="checkbox" [(ngModel)]="i.checked"  (change)="termsChange($event)" value ={{i.id}}></td> 
+            <td><input type="checkbox" id="checked"  [(ngModel)]="i.checked" value ={{i.id}}{{i.shortDescription}}></td>   
+           <!-- <td><input type="checkbox" id="checked"  [(ngModel)]="i.checked" (change)="termsChange($event)" value ={{i.id}}{{i.shortDescription}}></td>  -->
            <!--<td><input type="checkbox" id ="checked" value="checked"></td>--> 
               <!--<td>{{ i.id }}</td>-->
             <td>{{ i.category.description }}</td>
@@ -41,7 +42,9 @@
             </td>
         </tr>
         <br>
-        <button class="btn btn-primary" input type="submit" id="checked"  a routerLink="/quote/create/">Create Quote</button>
+        <pre>{{this.selectedCheckboxList}}</pre>
+        <!-- <button class="btn btn-primary" input type="submit" id="checked"  a routerLink="/quote/create/">Create Quote</button> -->
+       
     </tbody>
 </table>
 
