changes to create componenet html

--- a/src/app/category/category-list/category-list.component.html
+++ b/src/app/category/category-list/category-list.component.html
@@ -1,9 +1,12 @@
+<h1><img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65"></h1>
 <app-menu></app-menu>
 <div>
     <br>
     <span id="pageTitle">TIDC Pricing Categories</span>  |
-    <a routerLink="/category/create"></a> 
+    <a routerLink="/category/create">New Category</a> 
     <!-- <input [(ngModel)]="searchCriteria" type="text" placeholder="Search"> -->
+    <br>
+    <hr>
 </div>
 <div>
 <main>
