--- a/src/app/item/item-create/item-create.component.html
+++ b/src/app/item/item-create/item-create.component.html
@@ -1,3 +1,4 @@
+<h1><img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65"></h1>
 <app-menu></app-menu>
 <div>
     <span id="pageTitle">CREATE NEW TIDC Products/Services</span>  
