--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,4 +1,5 @@
-<<app-menu></app-menu>
+    <h1><img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65"></h1>  
+<app-menu></app-menu>
 <br>
 <main>
     <body>
