--- a/src/app/quote/create-quote/create-quote.component.html
+++ b/src/app/quote/create-quote/create-quote.component.html
@@ -2,7 +2,8 @@
 <div class="right">
     <p>Quote <br>
         <label for="Submitted">Submitted on:&nbsp;</label>
-        <input type="date" id="Submitted" style="width: 200px;"><br></p>
+        <input type="date" id="Submitted" style="width: 200px;"><br>
+    </p>
     <p style="color: red">Quote is valid for 90 days
     </p>
 </div>
@@ -16,7 +17,7 @@
     <body>
        <div class="top">
         <form>
-            <label for="For">For:&nbsp;&nbsp; </label>
+            <label for="For" >For:&nbsp;&nbsp; </label>
             <input type="text" id="for" style="width: 1100px;">            
         </form>
         
@@ -34,46 +35,44 @@
                 INTERNAL USE ONLY
             </div>
             <hr>
-        </form>
+        </form>    
        </div>
-        <!-- <div>
-          <form action="#">
-                <label for="Products"> Choose Product/Services</label>
-                <tr>
-                    <td>Choose Products/Services: &nbsp;</td>
-                        <td>
-                            <select multiple="true" class="selectItems" [(ngModel)]="item.categoryId">
-                                <option *ngFor="let i of items" value="{{i.id}}">{{i.shortDescription}}</option>                              
-                            </select>                         
-                        </td>
-                </tr>                 
-            </form>
-        </div> -->
-
+      
         
-
-       
-    <table class="table table-striped table-sm" id="headings">
+<table class="table table-striped table-sm" class="table table-hover" id ="selectedItems" >
     <thead>
         <tr>
+            <td></td>          
+            <td>Product</td>
             <td>SKU</td>
-            <td>Service Name</td>
-            <td>Description</td>
+            <td>Part Number</td>
+            <td>Short Description</td>
             <td>Long Description</td>
-            <td>Unit</td>
-            <td>Cost to Sales</td>        
-            <td>Suggested Cost</td>               
+            <td>Cost</td>
+            <td>Sell Price</td>
+            <td>Unit</td>           
         </tr>
     </thead>
-   <tr *ngFor="let i of items | itemSearch:searchCriteria">
-    <td>{{ i.sku }}</td>
-    <td>{{ i.category.description }}</td>
-    <td>{{ i.shortDescription}} </td>
-    <td>{{ i.longDescription }}</td>
-    <td>{{ i.unit }}</td>
-    <td>{{ i.cost | currency }}</td>
-    <td>{{ i.sell | currency }}</td>   
-   </tr>
+    <tbody>
+        <tr *ngFor="let i of items | itemSearch:searchCriteria">
+            <td><input type="checkbox" [checked]="i.select" (change)="termsChange($event)"  name ={{i.id}}{{i.shortDescription}}></td>   
+           <!-- <td><input type="checkbox" id="checked"  [(ngModel)]="i.checked" (change)="termsChange($event)" value ={{i.id}}{{i.shortDescription}}></td>  -->
+           <!--<td><input type="checkbox" id ="checked" value="checked"></td>--> 
+              <!--<td>{{ i.id }}</td>-->
+            <td>{{ i.category.description }}</td>
+            <td>{{ i.sku }}</td>
+            <td>{{ i.partNumber }}</td>
+            <td>{{ i.shortDescription }}</td>
+            <td>{{ i.longDescription }}</td>
+            <td>{{ i.cost | currency }}</td>
+            <td>{{ i.sell | currency }}</td>
+            <td>{{ i.unit}}</td>          
+        </tr>
+        <br>
+        <button class="btn btn-primary" input type="submit" id="checked">Create Quote</button>
+         <!-- <button class="btn btn-primary" input type="submit" id="checked"  a routerLink="/quote/create/">Create Quote</button> -->
+       
+    </tbody>
 </table>
 
 <form>
@@ -83,7 +82,8 @@
 <br>
 <p>Thank you for your business.</p>
 <p>Submitted by: Vincent Veak</p>
-<p>Approved by:</p>
+<label for="approved">Approved by: &nbsp; &nbsp;</label>
+    <input type="text" id="approved" style="width: 1100px;">
 
 <div class="notes">
     <div>Next steps: Contact your CX/project coordinator to begin next steps. 
