adjusted buttons on home html page and color bar on createquote html page

--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -1,9 +1,9 @@
-div#home {
+.home {
     text-align:center;
 }
 div#home div {
     display: inline-block;
-    width: 50%;
+    width: 75%;
     margin: 20px auto;
        
 }
