--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,15 +1,16 @@
     <h1><img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65"></h1>  
 <app-menu></app-menu>
 <br>
+<br>
 <main>
     <body>
-        <div id="home">
+        <div class="home">
                
             <form>            
                 <p>
-                    <button class="btn btn-outline-secondary btn-lg shadow p-3 mb-5 rounded" a routerLink="/item/list/">Maintenance </button> &nbsp; &nbsp;     
+                    <button class="btn btn-outline-secondary btn-lg shadow p-4 mb-5 rounded" a routerLink="/item/list/">Maintenance </button> &nbsp; &nbsp; &nbsp;    
         
-                     <button class="btn btn-outline-secondary btn-lg shadow p-3 mb-5 rounded" a routerLink="/quote/create/">Create Quote</button>
+                     <button class="btn btn-outline-secondary btn-lg shadow p-4 mb-5 rounded" a routerLink="/quote/create/">Create Quote</button>
               </p>                 
             </form>
         </div> 
