--- a/src/app/quote/create-quote/create-quote.component.html
+++ b/src/app/quote/create-quote/create-quote.component.html
@@ -15,7 +15,7 @@
     </p>
     <p style="color: red">Quote is valid for 90 days
     </p>
-</div>
+</div>`
 <div class="left">
     <span>
     <img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65">
