--- a/src/styles.css
+++ b/src/styles.css
@@ -6,8 +6,9 @@ input {
     font-weight: bold;
     font-style: italic;
 }
-.body {
-    margin: 25px, 25px, 25px, 25px;
+body {
+    margin-top: 25px;
+    margin-left: 25px;
     
 
 }
