--- a/src/app/user/user-create/user-create.component.html
+++ b/src/app/user/user-create/user-create.component.html
@@ -1,1 +1,49 @@
-<p>user-create works!</p>
+<h1><img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65"></h1>
+<app-menu></app-menu>
+<div id="component">
+    <div id="heading">
+        <span id="pageTitle">{{ pageTitle }}</span>
+    </div>
+    <main>
+        <table class="table table-striped table-sm">
+            <tbody>
+                <tr>
+                    <td>Id: </td>
+                    <td><input [(ngModel)]="user.id" type="number" disabled></td>
+                </tr>
+                <tr>
+                    <td>User name:</td>
+                    <td><input [(ngModel)]="user.username" type="text" ></td>
+                </tr>
+                <tr>
+                    <td>Password:</td>
+                    <td><input [(ngModel)]="user.password" type="password" ></td>
+                </tr>
+                <tr>
+                    <td>First name:</td>
+                    <td><input [(ngModel)]="user.firstname" type="text" ></td>
+                </tr>
+                <tr>
+                    <td>Last name:</td>
+                    <td><input [(ngModel)]="user.lastname" type="text" ></td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><input [(ngModel)]="user.email" type="text" ></td>
+                </tr>
+                <tr>
+                    <td>Reviewer?:</td>
+                    <td><input [(ngModel)]="user.isTSS" type="checkbox" ></td>
+                </tr>
+                <tr>
+                    <td>Admin?:</td>
+                    <td><input [(ngModel)]="user.isAdmin" type="checkbox" ></td>
+                </tr>
+            </tbody>
+        </table>
+        <div>
+            <button (click)="save()" class="btn btn-primary">Save</button>
+        </div>
+    </main>
+</div>
+<footer></footer>
