--- a/src/app/user/user-detail/user-detail.component.html
+++ b/src/app/user/user-detail/user-detail.component.html
@@ -1,1 +1,56 @@
-<p>user-detail works!</p>
+<h1><img src='./assets/images/Connection.png' alt="connection logo" width="365" height="65"></h1>
+<app-menu></app-menu>
+<div id="component">
+    <div id="heading">
+        <span id="pageTitle">{{ pageTitle }}</span>
+    </div>
+    <main>
+        <table class="table table-striped table-sm" *ngIf="user">
+            <tbody>
+                <tr>
+                    <td>Id: </td>
+                    <td><input [(ngModel)]="user.id" type="number" disabled></td>
+                </tr>
+                <tr>
+                    <td>User name:</td>
+                    <td><input [(ngModel)]="user.username" type="text" disabled></td>
+                </tr>
+                <tr>
+                    <td>Password:</td>
+                    <td><input [(ngModel)]="user.password" type="password" disabled></td>
+                </tr>
+                <tr>
+                    <td>First name:</td>
+                    <td><input [(ngModel)]="user.firstname" type="text" disabled></td>
+                </tr>
+                <tr>
+                    <td>Last name:</td>
+                    <td><input [(ngModel)]="user.lastname" type="text" disabled></td>
+                </tr>
+                <tr>
+                    <td>Phone:</td>
+                    <td><input [(ngModel)]="user.phone" type="text" disabled></td>
+                </tr>
+                <tr>
+                    <td>Email:</td>
+                    <td><input [(ngModel)]="user.email" type="text" disabled></td>
+                </tr>
+                <tr>
+                    <td>Reviewer?:</td>
+                    <td><input [(ngModel)]="user.isReviewer" type="checkbox" disabled></td>
+                </tr>
+                <tr>
+                    <td>Admin?:</td>
+                    <td><input [(ngModel)]="user.isAdmin" type="checkbox" disabled></td>
+                </tr>
+            </tbody>
+        </table>
+        <div>
+            <button (click)="remove()" class="btn btn-danger">Delete</button>
+            <span *ngIf="showVerifyButton">
+                | <button (click)="verifyRemove()" class="btn btn-danger">Verify Delete</button>
+            </span>
+        </div>
+    </main>
+</div>
+<footer></footer>
